tests/baselines/reference/internalAliasUninitializedModule.errors.txt
internalAliasUninitializedModule.ts(12,5): error TS2454: Variable 'x' is used before being assigned.


==== internalAliasUninitializedModule.ts (1 errors) ====
    module a {
        export module b {
            export interface I {
                foo();
            }
        }
    }
    
    module c {
        import b = a.b;
        export var x: b.I;
        x.foo();
        ~
!!! error TS2454: Variable 'x' is used before being assigned.
    }